feat(api): add wallet token route
